@@ -1,4 +1,7 @@
 For 1.20.5
+	- EXAMINE mode - tries to determine distance to geometry, not assume distance to 
+	  (0,0,0)
+
 	- remove InlineLoadControl - old VRML Geospatial 1.1 node.
 
 	- Filenames with spaces better handled now - some handling bugs fixed.
